Changing layout on touch devices

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,5 @@
 :root {
-	--main-color: #2596be;
+	--main-color: #2596be; /* #00a4dc */
 	--main-color-hover: #30b1e0;
 	--main-color-focus: #40a4c6;
 
