--- a/client/src/components/MangaCard/MangaCard.module.css
+++ b/client/src/components/MangaCard/MangaCard.module.css
@@ -54,6 +54,11 @@
 	transition: opacity 0.2s;
 }
 
+body[data-is-touch-screen='true'] .cardOverlay {
+	opacity: 1 !important;
+	background-color: transparent !important;
+}
+
 .card:hover .cardOverlay {
 	opacity: 1;
 	user-select: none;
@@ -65,6 +70,11 @@
 	bottom: 0;
 	display: flex;
 	flex-direction: row-reverse;
+}
+
+body[data-is-touch-screen='true'] .actionButtons {
+	right: 0.3em;
+	bottom: 0.3em;
 }
 
 .actionButtons > button {
@@ -81,6 +91,37 @@
 	outline: none;
 	cursor: pointer;
 	font-size: 1em;
+	position: relative;
+	/* z-index: 3; */
+}
+
+body[data-is-touch-screen='true'] .actionButtons > button:not(:first-child) {
+	display: none;
+}
+
+body[data-is-touch-screen='true'] .actionButtons > button::after {
+	content: '';
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 100%;
+	height: 100%;
+	padding: 0.4em;
+	transform: translate(-50%, -50%);
+	border-radius: 50%;
+	background-color: var(--main-color);
+	opacity: 0;
+	/* z-index: 1; */
+}
+
+body[data-is-touch-screen='true'] .actionButtons > button:active::after {
+	opacity: 0.4;
+}
+
+body[data-is-touch-screen='true'] .actionButtons > button {
+	background-color: rgba(0, 0, 0, 0.7) !important;
+	margin-left: 0.4em;
+	padding: 0.3em;
 }
 
 .actionButtons > button:hover {
@@ -93,7 +134,18 @@
 }
 
 .actionButtons > button:hover > svg {
-	fill: #00a4dc;
+	fill: var(--main-color);
+}
+
+body[data-is-touch-screen='true'] .actionButtons > button:nth-child(1) > svg {
+	fill: #fff;
+}
+
+body[data-is-touch-screen='true']
+	.actionButtons
+	> button:nth-child(1):focus
+	> svg {
+	fill: var(--main-color);
 }
 
 .actionButtons > button[data-finished='true'] > svg {
