--- a/client/src/index.css
+++ b/client/src/index.css
@@ -30,7 +30,6 @@
 }
 
 body {
-	overflow-x: hidden;
 	line-height: 1.35;
 	/* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
 		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -69,6 +68,11 @@ span {
 	height: 56px;
 	border-radius: 8px;
 	border: 4px solid transparent;
+	background-clip: content-box;
+	background-color: #bbb;
+}
+
+::-webkit-scrollbar-corner {
 	background-clip: content-box;
 	background-color: #bbb;
 }
