--- a/client/src/components/MangaCard/MangaCard.module.css
+++ b/client/src/components/MangaCard/MangaCard.module.css
@@ -31,15 +31,16 @@
 .imageContainer {
 	position: absolute;
 	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
+	width: 100%;
+	height: 100%;
 	overflow: hidden;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .imageContainer img {
 	height: 100%;
-	object-fit: cover;
 }
 
 .cardOverlay {
