--- a/client/src/index.css
+++ b/client/src/index.css
@@ -47,6 +47,7 @@ button {
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
 		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
 		sans-serif;
+	font-size: 16px;
 }
 
 h1,
