--- a/client/src/components/Popups/NewMangaPopup/NewMangaPopup.module.css
+++ b/client/src/components/Popups/NewMangaPopup/NewMangaPopup.module.css
@@ -1,7 +1,9 @@
 .container {
-	width: 500px;
-	height: 550px;
+	/* width: 500px; */
+	/* height: 550px; */
 	max-width: 100%;
+	height: 500px;
+	padding-bottom: 4.5em;
 	overflow: hidden scroll;
 }
 
@@ -20,7 +22,8 @@
 }
 
 .inputContainer input {
-	padding: 0 3.5em 0 1em;
+	/* padding: 0 3.5em 0 1em; */
+	padding: 0 0.2em 0 1em;
 	background-color: transparent;
 	border: 0;
 	outline: none;
@@ -82,19 +85,22 @@
 .hostName {
 	color: #fff;
 	font-size: 1.2em;
+	font-weight: normal;
 	margin: 5px 10px 15px 10px;
 	width: 100%;
 }
 
 .mangaItem {
+	background-color: transparent;
+	text-align: left;
 	position: relative;
 	display: grid;
 	grid-template-columns: auto 1fr;
 	grid-template-rows: 100%;
 	height: 120px;
-	width: calc(100% - 30px);
+	width: 90%;
 	padding: 0 30px 0 0;
-	margin: 0 0 15px 30px;
+	margin: 0 auto 15px auto;
 	overflow: hidden;
 	border: 1px solid var(--bg-12dp);
 	border-radius: 4px;
