Remade db model 'manga'

--- a/client/src/components/MangaCard/MangaCard.module.css
+++ b/client/src/components/MangaCard/MangaCard.module.css
@@ -99,7 +99,7 @@
 	fill: var(--main-color);
 }
 
-.actionButtons > button[data-finished='true'] > svg {
+.actionButtons > button[data-hasfinishedreading='true'] > svg {
 	fill: #c33;
 }
 
