--- a/client/src/components/MediaCard/MediaCard.module.css
+++ b/client/src/components/MediaCard/MediaCard.module.css
@@ -18,7 +18,7 @@
 	left: 0;
 	right: 0;
 	background-color: rgba(0, 0, 0, 0.5);
-	z-index: 5;
+	/* z-index: 5; */
 	opacity: 0;
 	transition: opacity 0.2s;
 }
