--- a/client/src/index.css
+++ b/client/src/index.css
@@ -79,15 +79,15 @@ span {
 }
 
 @font-face {
-	font-family: 'Material Symbols Outlined';
+	font-family: 'Material Icons';
 	font-style: normal;
-	font-weight: 100 700;
-	src: url(https://fonts.gstatic.com/s/materialsymbolsoutlined/v39/kJEhBvYX7BgnkSrUwT8OhrdQw4oELdPIeeII9v6oFsI.woff2)
+	font-weight: 400;
+	src: url(https://fonts.gstatic.com/s/materialicons/v135/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2)
 		format('woff2');
 }
 
 .icon {
-	font-family: 'Material Symbols Outlined';
+	font-family: 'Material Icons';
 	font-weight: normal;
 	font-style: normal;
 	font-size: 24px;
