--- a/client/src/components/MediaCard/MediaCard.module.css
+++ b/client/src/components/MediaCard/MediaCard.module.css
@@ -11,26 +11,32 @@
 	overflow: hidden;
 }
 
+.imageContainer img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
 .overlay {
 	position: absolute;
 	top: 0;
 	bottom: 0;
 	left: 0;
 	right: 0;
-	background-color: rgba(0, 0, 0, 0.5);
-	/* z-index: 5; */
-	opacity: 0;
+	background-color: transparent;
+	opacity: 1;
 	transition: opacity 0.2s;
 }
 
-.card:hover .overlay {
-	opacity: 1;
-}
+@media (hover: hover) {
+	.overlay {
+		background-color: rgba(0, 0, 0, 0.5);
+		opacity: 0;
+	}
 
-.imageContainer img {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
+	.card:hover .overlay {
+		opacity: 1;
+	}
 }
 
 .card:global(.vertical) {
