--- a/client/src/components/HorizontalScrollContainer/HorizontalScrollContainer.module.css
+++ b/client/src/components/HorizontalScrollContainer/HorizontalScrollContainer.module.css
@@ -1,6 +1,5 @@
 .top {
 	display: flex;
-	/* flex-direction: row; */
 	flex-wrap: wrap;
 	align-items: center;
 	justify-content: space-between;
@@ -25,9 +24,12 @@
 	background-color: rgba(255, 255, 255, 0.1);
 }
 
-.buttons button[disabled] {
-	color: #333;
+.buttons button[disabled=''] {
 	cursor: auto;
+}
+
+.buttons button[disabled=''] i {
+	color: #333;
 }
 
 .scrollContainer {
