--- a/client/src/components/Popups/ChooseProfilePicture/index.module.css
+++ b/client/src/components/Popups/ChooseProfilePicture/index.module.css
@@ -1,8 +1,7 @@
 .mainContainer {
-	width: 60em;
-	max-width: 100%;
+	width: 100%;
 	height: 100%;
-	/* overflow: auto hidden; */
+	overflow: hidden scroll;
 }
 
 .series {
