--- a/client/src/components/Popups/EditMetadata/EditMetadata.module.css
+++ b/client/src/components/Popups/EditMetadata/EditMetadata.module.css
@@ -1,13 +1,10 @@
 .container {
-	/* position: relative; */
-	/* width: 100%;
-	height: 100%; */
+	width: 100%;
+	height: 100%;
+	overflow: hidden scroll;
 }
 
 .main {
-	max-height: calc(100vh - 6em);
-	width: 40em;
-	overflow-y: scroll;
 	padding: 2em;
 	padding-bottom: 7em;
 }
