--- a/client/src/components/Select/index.module.css
+++ b/client/src/components/Select/index.module.css
@@ -14,8 +14,8 @@
 	outline: none;
 }
 
-.container > svg {
-	width: 30px;
+.container > i {
+	font-size: 18px;
 	transition: transform 0.1s ease-out;
 }
 
