--- a/client/src/components/Popups/ChooseProfilePicture/index.module.css
+++ b/client/src/components/Popups/ChooseProfilePicture/index.module.css
@@ -7,76 +7,21 @@
 .series {
 	display: flex;
 	flex-direction: column;
-	margin: 1em;
-	margin-right: 0;
+	padding: 1em;
 	position: relative;
-	/* padding-bottom: 11em; */
-	height: 12em;
 }
 
-.images {
-	display: flex;
-	position: absolute;
-	top: 2em;
-	transition: left 0.3s ease-in-out;
-}
-
-.images button {
-	background-color: transparent;
-	margin-right: 8px;
+.imageContainer {
+	border: 0;
+	height: 8em;
+	padding: 0 2px;
+	width: 8em;
 	cursor: pointer;
-	width: 160px;
-	height: 160px;
-	border-radius: 0.25em;
-	border: 0.15em solid transparent;
-	overflow: hidden;
+	-webkit-user-drag: none;
+	background-color: transparent;
 }
 
-.images img {
+.imageContainer img {
 	width: 100%;
 	height: 100%;
-	-webkit-user-drag: none;
-}
-
-.images button:hover {
-	border-color: #e5e5e5;
-}
-
-.pagination {
-	height: 160px;
-	width: 4em;
-	position: absolute;
-	bottom: 0;
-	background-color: rgba(0, 0, 0, 0.75);
-	border: 0;
-	opacity: 0;
-	transition: opacity 0.15s;
-	cursor: pointer;
-	z-index: 2;
-}
-
-.pagination:global(.left) {
-	left: -1em;
-}
-
-.pagination:global(.right) {
-	right: 0px;
-}
-
-.pagination:global(.left) svg {
-	transform: rotate(90deg);
-}
-
-.pagination:global(.right) svg {
-	transform: rotate(-90deg);
-}
-
-.series:hover .pagination {
-	opacity: 1;
-}
-
-@media (hover: none) {
-	.pagination {
-		opacity: 1;
-	}
 }
