--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,6 +17,9 @@
 	--bg-24dp: #383838;
 
 	--padding: 0.7em;
+	--font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+		'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+		sans-serif;
 }
 
 #root {
@@ -31,22 +34,16 @@
 
 body {
 	line-height: 1.35;
-	/* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-		sans-serif; */
-	/* font-family: Noto Sans, Noto Sans HK, Noto Sans JP, Noto Sans KR, Noto Sans SC,
-		sans-serif; */
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	background-color: var(--bg-00dp);
+	overflow-x: hidden;
 }
 
 body,
 button {
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-		sans-serif;
+	font-family: var(--font-family);
 	font-size: 16px;
 	color: var(--text-color);
 }
@@ -103,10 +100,6 @@ span {
 	-moz-osx-font-smoothing: grayscale;
 	color: inherit;
 }
-
-/* iframe {
-	display: none !important;
-} */
 
 svg {
 	fill: #fff;
