--- a/client/src/components/MediaCard/MediaCard.module.css
+++ b/client/src/components/MediaCard/MediaCard.module.css
@@ -3,6 +3,7 @@
 	padding: 0 5px 10px 5px;
 	text-decoration: none;
 	max-width: 100%;
+	position: relative;
 }
 
 .card:global(.vertical) {
@@ -11,6 +12,24 @@
 
 .card:global(.horizontal) {
 	width: 350px;
+}
+
+.loader {
+	position: absolute;
+	top: -10px;
+	right: 1.5em;
+	z-index: 10;
+}
+
+.updates {
+	position: absolute;
+	top: -5px;
+	right: -0px;
+	z-index: 10;
+	width: 20px;
+	height: 20px;
+	background-color: rgb(219, 8, 8);
+	border-radius: 50%;
 }
 
 .imageContainer {
