--- a/client/src/pages/read/read.module.css
+++ b/client/src/pages/read/read.module.css
@@ -4,11 +4,14 @@
 	padding: 20px 5vw;
 }
 
-.title {
+/* .title {
 	color: rgba(255, 255, 255, 0.7);
 	padding: 10px 0;
 	font-weight: 100;
 	height: 52px;
+} */
+
+.chapterSelect {
 }
 
 .container {
