--- a/client/src/pages/read/read.module.css
+++ b/client/src/pages/read/read.module.css
@@ -4,15 +4,15 @@
 	padding: 20px 5vw;
 }
 
-/* .title {
+.title {
 	color: rgba(255, 255, 255, 0.7);
 	padding: 10px 0;
 	font-weight: 100;
 	height: 52px;
-} */
-
-.chapterSelect {
 }
+
+/* .chapterSelect {
+} */
 
 .container {
 	height: 2.3em;
@@ -46,33 +46,44 @@
 	cursor: pointer;
 }
 
-.header button,
-.header a {
-	height: 100%;
-}
-
-.header button svg,
-.header a svg {
-	height: 100%;
+.button {
+	text-decoration: none;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border: 1px solid var(--bg-02dp);
+	background-color: transparent;
+	border-radius: 4px;
+	font-family: inherit;
+	transition: box-shadow, background-color 0.2s;
+	user-select: none;
+	color: #fff;
 	padding: 5px;
+	cursor: pointer;
+	line-height: 0pt;
 }
 
-.pagination.icon svg {
-	padding: 5px 8px;
-}
-
-.pagination span {
-	color: #eee;
-	padding: 5px;
-	width: 50px;
-}
-
-.pagination:nth-child(1) span {
+.button:global(.icon-left) {
+	padding-left: 5px;
 	padding-right: 10px;
+	gap: 5px;
 }
 
-.pagination:nth-child(3) span {
+.button:global(.icon-right) {
 	padding-left: 10px;
+	padding-right: 5px;
+	gap: 5px;
+}
+
+.button[disabled] {
+	opacity: 0.3;
+	pointer-events: none;
+	cursor: default;
+}
+
+.button:not([disabled]):hover {
+	box-shadow: 0 1px 3px rgb(0 0 0 / 50%);
+	background-color: #303030;
 }
 
 .chapters {
