Fixing adding manga to library crash

--- a/client/src/components/Popups/NewMangaPopup/NewMangaPopup.module.css
+++ b/client/src/components/Popups/NewMangaPopup/NewMangaPopup.module.css
@@ -185,6 +185,11 @@
 	background: var(--main-color);
 }
 
+.footer button[type='submit'][disabled] {
+	opacity: 0.4;
+	cursor: not-allowed;
+}
+
 .footer button[type='reset'] {
 	background-color: var(--bg-24dp);
 }
