--- a/client/src/components/navbars/Anime/AnimeNavbar.module.css
+++ b/client/src/components/navbars/Anime/AnimeNavbar.module.css
@@ -1,11 +1,15 @@
 .navbar {
-	background-color: #202020;
+	background-color: rgba(0, 0, 0, 0.6);
+	/* background-color: #202020; */
 	width: 100%;
 	height: 64px;
 	padding: 0 10px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	position: fixed;
+	top: 0;
+	left: 0;
 }
 
 .buttonContainer {
@@ -30,4 +34,10 @@
 
 .button:hover {
 	background-color: rgba(255, 255, 255, 0.1);
+}
+
+@media (max-width: 800px) {
+	.navbar {
+		background-color: #202020;
+	}
 }
