--- a/client/src/components/Select/Select.module.css
+++ b/client/src/components/Select/Select.module.css
@@ -1,4 +1,4 @@
-.container {
+.selectContainer {
 	background-color: transparent;
 	border: 1px solid #222;
 	/* border: 1px solid rgb(168, 168, 168); */
@@ -14,11 +14,18 @@
 	outline: none;
 }
 
-.container > i {
+.selectContainer > i {
 	font-size: 18px;
 	transition: transform 0.1s ease-out;
 }
 
-.dropdown {
-	position: absolute;
+.check {
+	font-size: 18px;
+	margin-right: 5px;
+	opacity: 0;
+	display: none;
+}
+
+:global(.selected) .check {
+	opacity: 1;
 }
