--- a/client/src/components/Dropdown/Dropdown.module.css
+++ b/client/src/components/Dropdown/Dropdown.module.css
@@ -4,10 +4,11 @@
 	z-index: 999;
 	cursor: auto;
 	padding: 5px 0;
-	max-height: calc(100vh - 2em);
+	/* max-height: calc(100vh - 5em); */
 	overflow-y: auto;
 	visibility: hidden;
 	position: fixed;
+	/* display: flex; */
 }
 
 .dropdown:global(.visible) {
