Select item text whitespace: nowrap

--- a/client/src/components/Dropdown/Dropdown.module.css
+++ b/client/src/components/Dropdown/Dropdown.module.css
@@ -23,6 +23,7 @@
 	font-family: var(--font-family);
 	color: #fff;
 	text-align: left;
+	white-space: nowrap;
 }
 
 .dropdown:global(.small) .item {
