--- a/client/src/components/navbars/navbar.module.css
+++ b/client/src/components/navbars/navbar.module.css
@@ -1,14 +1,14 @@
 .navbar {
-	background-color: rgba(0, 0, 0, 0.6);
-	width: 100%;
-	height: 64px;
-	padding: 0 10px;
+	background-color: var(--bg-00dp);
 	display: flex;
-	justify-content: space-between;
+	padding: 10px var(--padding);
+	margin-bottom: 5px;
+	height: 65px;
 	align-items: center;
-	position: fixed;
-	top: 0;
-	left: 0;
+}
+
+.navbar > * {
+	width: 100%;
 }
 
 .buttonContainer {
@@ -33,10 +33,4 @@
 
 .button:hover {
 	background-color: rgba(255, 255, 255, 0.1);
-}
-
-@media (max-width: 800px) {
-	.navbar {
-		background-color: #202020;
-	}
 }
