Fixed video player

--- a/client/src/components/navbars/navbar.module.css
+++ b/client/src/components/navbars/navbar.module.css
@@ -5,10 +5,7 @@
 	margin-bottom: 5px;
 	height: 65px;
 	align-items: center;
-}
-
-.navbar > * {
-	width: 100%;
+	justify-content: space-between;
 }
 
 .buttonContainer {
