--- a/client/src/components/MediaCard/MediaCard.module.css
+++ b/client/src/components/MediaCard/MediaCard.module.css
@@ -23,13 +23,15 @@
 
 .updates {
 	position: absolute;
-	top: -5px;
-	right: -0px;
+	top: 3px;
+	right: 8px;
 	z-index: 10;
 	width: 20px;
 	height: 20px;
-	background-color: rgb(219, 8, 8);
+	background-color: var(--update-badge);
 	border-radius: 50%;
+	box-shadow: 0px 2px 4px 0px rgb(0 0 0 / 71%);
+	pointer-events: none;
 }
 
 .imageContainer {
